--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  height: 100%;
+  width:100%;
 }
 
 .jumbotron {
@@ -37,9 +39,10 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  height: 100%;
+  width:100%;
 }
 
 .past {
@@ -59,13 +62,16 @@ textarea{
 
 .saveBtn {
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   background-color: #06AED5;
   color: white;
+  height: 100%;
+  width:100%;
+  margin-left: 0;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 45px;
   transition: all .3s ease-in-out;
 }
