--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color:black;
 }
 
 .present {
@@ -57,7 +57,7 @@ textarea{
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -72,6 +72,6 @@ textarea{
 }
 
 .saveBtn i:hover {
-  font-size: 45px;
+  font-size: 50px;
   transition: all .3s ease-in-out;
 }
